--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -28,7 +28,8 @@ jobs:
       - name: Instalar Ansible
         run: |
           sudo apt-get update
-          sudo apt-get install -y ansible python3-pip
+          sudo amazon-linux-extras install ansible2 -y
+          ansible --version
           pip3 install --user boto3
 
       - name: Configurar chave SSH para Ansible
