Include terraform destroy in pipeline
Add terraform destroy command before apply.

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -24,6 +24,7 @@ jobs:
         run: |
           cd sprint5-lab/infra
           terraform init
+          terraform destroy -auto-approve
           terraform apply -auto-approve
       - name: Instalar Ansible
         run: |
