--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           sudo apt-get update
           ansible --version
-          pip3 install --user ansible==4.10.0 boto3
+          pip3 install --user ansible-core==2.16.0 six boto3
 
       - name: Configurar chave SSH para Ansible
         run: |
