--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -46,4 +46,5 @@ jobs:
           ansible-playbook -i inventory setup.yml
       - name: Executar pipeline de dados
         run: |
+          pip3 install --user pandas boto3
           python sprint5-lab/scripts/data_pipeline.py
